--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,16 @@
-.App {
-  text-align: center;
+.grid {
+  display: grid;
+  margin: 20px;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.cell {
+  border: 1px solid;
+  float: left;
+  font-size: 24px;
   height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  line-height: 80px;
+  margin-bottom: -1px;
+  margin-right: -1px;
+  text-align: center;
+  width: 80px;
 }
