--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,4 +1,11 @@
 .grid {
+  width: 32rem;
+  height: 32rem;
+  padding: 1rem;
+  border-radius: .5rem;
   display: grid;
-  margin: 20px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-auto-rows: 1fr;
+  gap: 1rem;
+  background-color: #ddd;
 }
