--- a/src/Grid.css
+++ b/src/Grid.css
@@ -7,5 +7,6 @@
   grid-template-columns: repeat(4, 1fr);
   grid-auto-rows: 1fr;
   gap: 1rem;
+  grid-gap: 1rem; /* Safari */
   background-color: #ddd;
 }
