--- a/src/Grid.css
+++ b/src/Grid.css
@@ -1,12 +1,17 @@
 .grid {
-  width: 32rem;
-  height: 32rem;
   padding: 1rem;
   border-radius: .5rem;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-auto-rows: 1fr;
+  grid-template-columns: repeat(4, auto);
   gap: 1rem;
   grid-gap: 1rem; /* Safari */
   background-color: #ddd;
+  position: relative; /* set containing block for tiles */
+}
+
+.cell {
+  width: 6rem;
+  height: 6rem;
+  border-radius: .25rem;
+  background-color: #bbb;
 }
